Actions
Bug #11994
closedformat: fix print of accessible sectors, also print first and last usable sector
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Since we have disk space reserved for GPT, the user can only use range from first and last usable sector, it would be good to know about those.
format> verify Volume name = < > ascii name = <SUN-COMSTAR-1.0-10.00GB> bytes/sector = 4096 sectors = 2621440 accessible sectors = 2619381 first usable sector = 6 last usable sector = 2621434 Part Tag Flag First Sector Size Last Sector 0 system wm 6 256.47MB 65662 1 usr wm 65663 9.74GB 2619386 2 unassigned wm 0 0 0 3 unassigned wm 0 0 0 4 unassigned wm 0 0 0 5 unassigned wm 0 0 0 6 unassigned wm 0 0 0 8 reserved wm 2619387 8.00MB 2621434 format>
Updated by Toomas Soome over 3 years ago
- Subject changed from format: instead of accessible, print first and last usable sector to format: fix print of accessible sectors, also print first and last usable sector
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 500bef5604d6ac79e8c8ed41fe6401ce64a6b52e
commit 500bef5604d6ac79e8c8ed41fe6401ce64a6b52e Author: Toomas Soome <tsoome@me.com> Date: 2019-12-05T20:57:35.000Z 11994 format: fix print of accessible sectors, also print first and last usable sector Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions