11994 format: fix print of accessible sectors, also print first and last usable sector Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>